# ledgar

./: .gitignore  .mailmap  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ledgar/: __init__.py  config.py  errors.py  ledgar.py
ledgar/commands/: __init__.py  config.py  download.py  search.py
ledgar/db/: schema.py  store.py
ledgar/edgar/: __init__.py  bulk.py  client.py  parser.py
ledgar/formatters/: __init__.py  csv_fmt.py  json_fmt.py  table.py
tests/: conftest.py  test_config.py  test_formatters.py  test_parser.py  test_search.py  test_store.py
